prevent title from covering nav button

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -9,6 +9,11 @@ header {
 header h1 {
     margin-left: auto;
     margin-right: auto;
+    max-width: 70%;
+    font-size: 28px;
+    text-wrap: nowrap;
+    overflow-x: clip;
+    text-overflow: ellipsis;
 }
 
 header button.nav {
